--- a/_posts/2020-09-30-website.markdown
+++ b/_posts/2020-09-30-website.markdown
@@ -2,8 +2,10 @@
 layout: post
 title:  UCLA ACM Rebranding
 date:   2020-9-26
-image:  /assets/images/portfolio/Frame 2.png
+image:  /assets/images/portfolio/prof1.png
 author: Brian Ng
 ---
 
 Being a part of ACM Design, we were tasked with the re-branding and re-design of ACM's overall brand and design of specific committees. I was tasked with updating the UI design of committee-specific website.
+
+Showcase of work [here]("https://edwardminchin.github.io/")
