--- a/_posts/2020-09-30-mahjong.markdown
+++ b/_posts/2020-09-30-mahjong.markdown
@@ -6,5 +6,6 @@ image:  /assets/images/portfolio/smash.png
 author: Brian Ng
 ---
 
-Being a part of ACM Design, we were tasked with the re-branding and re-design of ACM's overall brand and design of specific committees. I was tasked with updating the UI design of committee-specific website.
+I play Mahjong (essentially Chinese poker) and Poker with my friends on a fairly frequent basis, and to keep track of our wins and losses we decided to create a leaderboard using React and Node. We used Node to create an online database to monitor statistics.
+
 Showcase of work [here](https://gitlab.com/smash-saturday/mahjong-score/-/tree/master)
