--- a/_posts/2020-09-30-redesign.markdown
+++ b/_posts/2020-09-30-redesign.markdown
@@ -8,6 +8,6 @@ author: Brian Ng
 
 
 
-Being a part of ACM Design, we were tasked with the re-branding and re-design of ACM's overall brand and design of specific committees. I was tasked with updating the UI design of committee-specific website through creating Figma wireframes, ensuring that my designs followed the new design guidelines that we came up with. I also assisted in creating 
+Being a part of ACM Design, we were tasked with the re-branding and re-design of ACM's overall brand and design of specific committees. I was tasked with updating the UI design of committee-specific website through creating Figma wireframes, ensuring that my designs followed the new design guidelines that we came up with. I also assisted in creating new motiffs, essentially the new 'face', for each committee. We emphasized using geometric, vector images in our designs, but to ensure that our designs do not look too flat or sharp, we also created designs with a feeling of depth to them (e.g. composing scenes with background, middle and foreground layers), and used gradients in emphasizing smoothness and roundness.
 
 Showcase of work [here](https://www.figma.com/file/wcgZCapVWhPeULPHPAcUyx/Assets-v3?node-id=142%3A133)
