--- a/_posts/2020-09-30-quark.markdown
+++ b/_posts/2020-09-30-quark.markdown
@@ -28,4 +28,4 @@ From the inspiration and references, I started creating low-fidelity wireframes 
 
 Current prototype shown below:
 
-<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F1TIsdkflrGgguMPbCtZcH5%2FSapphire-Tundra%3Fnode-id%3D1%253A2%26scaling%3Dmin-zoom" allowfullscreen></iframe>
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="100%" height="70%" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F1TIsdkflrGgguMPbCtZcH5%2FSapphire-Tundra%3Fnode-id%3D1%253A2%26scaling%3Dmin-zoom" allowfullscreen></iframe>
