--- a/_posts/2020-09-30-quark.markdown
+++ b/_posts/2020-09-30-quark.markdown
@@ -21,7 +21,7 @@ I then mapped out user flow diagram in order to keep track of how these features
 
 ### 2. Inspiration
 I incorporated designs and layouts from major websites such as LeetCode, HackerRank, Repl.it to have a sense of how much space is required for the user to both code, read documentation and read the output of the console effectively.
-<img src = "assets\images\examples\image_1556071101.png">
+<img src = "/assets/images/examples/image_1556071101.png">
 
 ### 3. Design
 From the inspiration and references, I started creating low-fidelity wireframes to get a sense of the overall layout of the web app and if it made sense to my previous user-flow. Then, with feedback from teammates I produced drafts of a high-fidelity wireframe. Web-app is still under development and future iterations may be added to the design.
